<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="INITIALIZE" Id="{9eee4c6a-b7fe-4839-94e4-ff9f40c4ce0f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION INITIALIZE : BOOL
VAR_INPUT
END_VAR
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
GVL_LOGS.NUM_TESTS_LOGGED := 0;


GVL_IO.SECTION1_DIG_INPUTS[0] := ADR(GVL_IO.C3_P1);
GVL_IO.SECTION1_DIG_INPUTS[1] := ADR(GVL_IO.C3_P2);
GVL_IO.SECTION1_DIG_INPUTS[2] := ADR(GVL_IO.C3_P3);
GVL_IO.SECTION1_DIG_INPUTS[3] := ADR(GVL_IO.C3_P4);
GVL_IO.SECTION1_DIG_INPUTS[4] := ADR(GVL_IO.C3_P5);
GVL_IO.SECTION1_DIG_INPUTS[5] := ADR(GVL_IO.C3_P6);
GVL_IO.SECTION1_DIG_INPUTS[6] := ADR(GVL_IO.C3_P7);
GVL_IO.SECTION1_DIG_INPUTS[7] := ADR(GVL_IO.C4_P1);
GVL_IO.SECTION1_DIG_INPUTS[8] := ADR(GVL_IO.C4_P2);
GVL_IO.SECTION1_DIG_INPUTS[9] := ADR(GVL_IO.C4_P3);
GVL_IO.SECTION1_DIG_INPUTS[10] := ADR(GVL_IO.C4_P4);
GVL_IO.SECTION1_DIG_INPUTS[11] := ADR(GVL_IO.C4_P5);
GVL_IO.SECTION1_DIG_INPUTS[12] := ADR(GVL_IO.C4_P6);
GVL_IO.SECTION1_DIG_INPUTS[13] := ADR(GVL_IO.C4_P7);
GVL_IO.SECTION1_DIG_INPUTS[14] := ADR(GVL_IO.C4_P8);
GVL_IO.SECTION1_DIG_INPUTS[15] := ADR(GVL_IO.C5_P1);
GVL_IO.SECTION1_DIG_INPUTS[16] := ADR(GVL_IO.C5_P2);
GVL_IO.SECTION1_DIG_INPUTS[17] := ADR(GVL_IO.C5_P3);
GVL_IO.SECTION1_DIG_INPUTS[18] := ADR(GVL_IO.C5_P4);
GVL_IO.SECTION1_DIG_INPUTS[19] := ADR(GVL_IO.C5_P5);
GVL_IO.SECTION1_DIG_INPUTS[20] := ADR(GVL_IO.C5_P6);


GVL_IO.SECTION2_DIG_INPUTS[0] := ADR(GVL_IO.C3_P1);



INITIALIZE := TRUE;]]></ST>
    </Implementation>
    <LineIds Name="INITIALIZE">
      <LineId Id="72" Count="23" />
      <LineId Id="66" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="100" Count="2" />
      <LineId Id="98" Count="1" />
      <LineId Id="96" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>